[tool.poetry]
name = "combinatorics-rl"
version = "0.1.0"
description = "Reinforcement learning to generate counterexamples to conjectures in mathematics."
authors = ["Guy Paterson-Jones <guy.paterson.jones@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
networkx = "^2.8.5"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
